# vlfm

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  gitman.yml  pyproject.toml  setup.py
.github/: CODEOWNERS
.github/workflows/: docker.yml  pre_commit.yml  test.yml
config/experiments/: llm_objectnav_hm3d.yaml  reality.yaml  ver_pointnav.yaml  vlfm_objectnav_hm3d.yaml  vln_r2r_ce.yaml
config/experiments/options/: default_params.yaml
config/tasks/: pointnav_depth_hm3d.yaml
docker/: Dockerfile
readmes/: installing_habitat.md
scripts/: eval_dummy_policy.sh  eval_fe_policy.sh  eval_itm_policy.sh  eval_llm_policy.sh  eval_oracle_fbe_policy.sh  launch_blip2_server.sh  launch_llm_server.sh  launch_vlm_servers.sh  parse_jsons.py
test/: test_setup.py  test_visualization.py
vlfm/: __init__.py  options.py  run.py
vlfm/adapter/: adapter.py
vlfm/envs/: privileged_env.py
vlfm/mapping/: base_map.py  frontier_map.py  object_map.py  object_point_cloud_map.py  obstacle_map.py  traj_visualizer.py  value_map.py  vlfmap.py  vlmap.py
vlfm/measurements/: gt_path_vln.py  traveled_stairs.py
vlfm/models/: waypoint_predictor.py
vlfm/obs_transformers/: resize.py  utils.py
vlfm/path_planning/: path_planner.py  rrt.py  rrt.pyi  utils.py
vlfm/policy/: action_replay_policy.py  base_objectnav_policy.py  base_policy.py  base_vln_policy.py  data_collection_policy.py  habitat_policies.py  itm_policy.py  llm_policy.py  path_policy.py  path_policy_mix.py  path_policy_mr.py  path_policy_sr.py  reality_policies.py  testing_policy.py  transformer_policy.py
vlfm/policy/utils/: acyclic_enforcer.py  pointnav_policy.py
vlfm/policy/utils/non_habitat_policy/: nh_pointnav_policy.py  resnet.py  rnn_state_encoder.py
vlfm/reality/: bdsw_nav_env.py  objectnav_env.py  pointnav_env.py  run_bdsw_objnav_env.py
vlfm/reality/robots/: base_robot.py  bdsw_robot.py  camera_ids.py
vlfm/semexp_env/: eval.py  objnav_gibson_zsos.yaml  semexp_policy.py
vlfm/text_processing/: base.py  multiresolution.py  singleresolution.py  utils.py
vlfm/utils/: episode_stats_logger.py  generate_dummy_policy.py  geometry_utils.py  habitat_visualizer.py  img_utils.py  log_saver.py  visualization.py  vlfm_trainer.py  vln_trainer.py
vlfm/vlm/: blip2.py  blip2_unimodal.py  blip2itm.py  clip.py  coco_classes.py  detections.py  fiber.py  grounding_dino.py  lseg.py  sam.py  sam_crop.py  server_wrapper.py  vl_model.py  yolov7.py
zsos/: __init__.py  run.py
zsos/detector/: classes.txt  grounding_dino.py
zsos/llm/: llm.py  prompts.py
zsos/mapping/: base_map.py  frontier_map.py  object_map.py  object_point_cloud_map.py  obstacle_map.py  traj_visualizer.py  value_map.py
zsos/measurements/: traveled_stairs.py
zsos/obs_transformers/: resize.py  utils.py
zsos/policy/: base_objectnav_policy.py  base_policy.py  habitat_policies.py  itm_policy.py  llm_policy.py  oracle_fbe_policy.py  reality_policies.py  semantic_policy.py
zsos/policy/utils/: acyclic_enforcer.py  pointnav_policy.py
zsos/policy/utils/non_habitat_policy/: nh_pointnav_policy.py  resnet.py
zsos/reality/: bdsw_nav_env.py  bdsw_objnav_env.py  objectnav_env.py  pointnav_env.py  run_bdsw_objnav_env.py
zsos/reality/policies/: basic_objnav_policy.py
zsos/reality/robots/: base_robot.py  bdsw_robot.py  frame_ids.py
zsos/semexp_env/: eval.py  objnav_gibson_zsos.yaml  semexp_policy.py
zsos/utils/: episode_stats_logger.py  geometry_utils.py  habitat_visualizer.py  img_utils.py  visualization.py
zsos/vlm/: blip2.py  blip2itm.py  classes.txt  coco_classes.py  detections.py  fiber.py  grounding_dino.py  midas.py  sam.py  server_wrapper.py  yolov7.py
